--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ biplavm }}
-          password: ${{ biplav001 }}
+          username:  biplavm 
+          password:  biplav001 
 
       # Build Docker image
       - name: Build Docker image
