--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username:  biplavm 
-          password:  biplav001 
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       # Build Docker image
       - name: Build Docker image
@@ -52,3 +52,26 @@ jobs:
           docker run -d --name test-container biplavm/my-next-app:$GITHUB_SHA
           docker exec test-container npm run test
           docker stop test-container
+
+  merge:
+    runs-on: ubuntu-latest
+    needs: test  # This ensures the merge happens only if tests pass
+
+    steps:
+      # Checkout the code again for the merge
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      # Fetch the latest changes from the remote repository
+      - name: Fetch latest changes
+        run: |
+          git fetch origin
+
+      # Merge dev into main if tests passed
+      - name: Merge dev into main
+        run: |
+          git checkout main
+          git merge origin/dev --no-ff -m "Auto-merge dev into main after passing tests"
+          git push origin main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Automatically authenticated for the push to main
