--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,27 +13,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Check out the code
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      # Set up Docker Buildx for building multi-platform Docker images
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Log in to Docker Hub (You need to add your Docker Hub credentials as GitHub secrets)
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: biplavm
           password: biplav001
 
-      # Build Docker image
       - name: Build Docker image
         run: |
           docker build -t biplavm/my-next-app:$GITHUB_SHA .
 
-      # Push Docker image to Docker Hub
       - name: Push Docker image to Docker Hub
         run: |
           docker push biplavm/my-next-app:$GITHUB_SHA
@@ -46,7 +41,6 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      # Run tests inside the Docker container (you can modify the command based on your testing setup)
       - name: Run Tests in Docker Container
         run: |
           docker run -d --name test-container biplavm/my-next-app:$GITHUB_SHA
@@ -58,20 +52,22 @@ jobs:
     needs: test  # This ensures the merge happens only if tests pass
 
     steps:
-      # Checkout the code again for the merge
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      # Fetch the latest changes from the remote repository
       - name: Fetch latest changes
         run: |
           git fetch origin
 
-      # Merge dev into main if tests passed
       - name: Merge dev into main
         run: |
           git checkout main
+          git pull origin main
           git merge origin/dev --no-ff -m "Auto-merge dev into main after passing tests"
+        continue-on-error: true  # Continue even if merge fails
+
+      - name: Push merge to main
+        run: |
           git push origin main
-        # env:
-        #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Automatically authenticated for the push to main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Ensure the push is authenticated
