--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -73,5 +73,5 @@ jobs:
           git checkout main
           git merge origin/dev --no-ff -m "Auto-merge dev into main after passing tests"
           git push origin main
-        # env:
-        #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Automatically authenticated for the push to main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Automatically authenticated for the push to main
