--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,50 +1,49 @@
 name: CI/CD Pipeline for Dockerized App
 
-permissions:
-  contents: write  # This grants the necessary permission to push changes
-  pull-requests: write  # If you're managing pull requests, you need this too
-
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
+      - dev  # Trigger on push to the dev branch
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      # Checkout the code
       - name: Checkout Code
         uses: actions/checkout@v2
 
+      # Set up Docker Buildx for building multi-platform Docker images
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      # Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: biplavm
-          password: biplav001
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
+      # Build Docker image
       - name: Build Docker image
         run: |
           docker build -t biplavm/my-next-app:$GITHUB_SHA .
 
+      # Push Docker image to Docker Hub
       - name: Push Docker image to Docker Hub
         run: |
           docker push biplavm/my-next-app:$GITHUB_SHA
 
   test:
     runs-on: ubuntu-latest
-    needs: build  # This ensures tests run after the build
+    needs: build  # Make sure the build job completes first
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
 
+      # Run tests inside the Docker container
       - name: Run Tests in Docker Container
         run: |
           docker run -d --name test-container biplavm/my-next-app:$GITHUB_SHA
@@ -53,25 +52,27 @@ jobs:
 
   merge:
     runs-on: ubuntu-latest
-    needs: test  # This ensures the merge happens only if tests pass
+    needs: test  # Ensure merge happens only if tests pass
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
 
+      # Fetch latest changes from remote repository
       - name: Fetch latest changes
         run: |
           git fetch origin
 
+      # Merge dev into main if tests pass
       - name: Merge dev into main
         run: |
           git checkout main
-          git pull origin main
-          git merge origin/mergedev --no-ff -m "Auto-merge testdev into main after passing tests"
-        continue-on-error: true  # Continue even if merge fails
-
+          git pull origin main  # Ensure local main is up-to-date
+          git merge origin/dev --no-ff -m "Auto-merge dev into main after passing tests"
+          
+      # Push the merge to main
       - name: Push merge to main
         run: |
           git push origin main
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Ensure the push is authenticated
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub's token for authentication
