--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,7 @@
 name: CI/CD Pipeline for Dockerized App
+permissions:
+  contents: write  # This grants the necessary permission to push changes
+  pull-requests: write  # If you're managing pull requests, you need this too
 
 on:
   push:
